--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 <section id="about-mobile">
       <div class="texto-about">
-    <h1 class="titulo">ANTECEDENTES PERSONALES</h1></div>
+    <h1 class="titulo">ANTECEDENTES PROFESIONALES</h1></div>
         <div class="about-filter">
             <button class="filter-btnAbout active" data-category="arg">Argentina</button>
             <button class="filter-btnAbout" data-category="ita">Italia</button>
@@ -319,28 +319,27 @@
             <div class="item" data-category="cocina"><img src="assets/cocinas/cocina4.jpeg" alt="Trabajo 13"></div>
             <div class="item" data-category="cocina"><img src="assets/cocinas/cocina5.jpeg" alt="Trabajo 14"></div>
             <div class="item" data-category="cocina"><img src="assets/cocinas/cocina6.jpeg" alt="Trabajo 15"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina7.jpeg" alt="Trabajo 16"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio1.jpg" alt="Trabajo 17"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio2.jpg" alt="Trabajo 18"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio3.jpg" alt="Trabajo 19"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio4.jpg" alt="Trabajo 20"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio5.jpg" alt="Trabajo 21"></div>
-            <div class="item" data-category="living"><img src="assets/living/living1.jpg" alt="Trabajo 22"></div>
-            <div class="item" data-category="living"><img src="assets/living/living2.jpg" alt="Trabajo 23"></div>
-            <div class="item" data-category="living"><img src="assets/living/living3.jpg" alt="Trabajo 24"></div>
-            <div class="item" data-category="living"><img src="assets/living/living4.jpg" alt="Trabajo 25"></div>
-            <div class="item" data-category="living"><img src="assets/living/living5.jpg" alt="Trabajo 26"></div>
-            <div class="item" data-category="living"><img src="assets/living/living6.jpg" alt="Trabajo 27"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina1.jpg" alt="Trabajo 28"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina2.jpg" alt="Trabajo 29"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina3.jpg" alt="Trabajo 30"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina4.jpg" alt="Trabajo 31"></div>
-            <div class="item" data-category="placard"><img src="assets/placards/placard1.jpg" alt="Trabajo 32"></div>
-            <div class="item" data-category="placard"><img src="assets/placards/placard2.jpg" alt="Trabajo 33"></div>
-            <div class="item" data-category="placard"><img src="assets/placards/placard3.jpg" alt="Trabajo 34"></div>
-            <div class="item" data-category="tabla"><img src="assets/tablas/tabla1.jpeg" alt="Trabajo 35"></div>
-            <div class="item" data-category="tabla"><img src="assets/tablas/tabla2.jpeg" alt="Trabajo 36"></div>
-            <div class="item" data-category="tabla"><img src="assets/tablas/tabla3.jpeg" alt="Trabajo 37"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio1.jpg" alt="Trabajo 16"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio2.jpg" alt="Trabajo 17"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio3.jpg" alt="Trabajo 18"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio4.jpg" alt="Trabajo 19"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio5.jpg" alt="Trabajo 20"></div>
+            <div class="item" data-category="living"><img src="assets/living/living1.jpg" alt="Trabajo 21"></div>
+            <div class="item" data-category="living"><img src="assets/living/living2.jpg" alt="Trabajo 22"></div>
+            <div class="item" data-category="living"><img src="assets/living/living3.JPG" alt="Trabajo 23"></div>
+            <div class="item" data-category="living"><img src="assets/living/living4.jpg" alt="Trabajo 24"></div>
+            <div class="item" data-category="living"><img src="assets/living/living5.jpg" alt="Trabajo 25"></div>
+            <div class="item" data-category="living"><img src="assets/living/living6.jpg" alt="Trabajo 26"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina1.jpg" alt="Trabajo 27"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina2.jpg" alt="Trabajo 28"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina3.jpg" alt="Trabajo 29"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina4.jpg" alt="Trabajo 30"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard1.jpg" alt="Trabajo 31"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard2.jpg" alt="Trabajo 32"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard3.jpg" alt="Trabajo 33"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla1.jpeg" alt="Trabajo 34"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla2.jpeg" alt="Trabajo 35"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla3.jpeg" alt="Trabajo 36"></div>
         </div>
         <div class="d-md-none" id="nextBtn">
             <svg width="42" height="42" viewBox="0 0 24 24" fill="none">
