--- a/index.html
+++ b/index.html
@@ -351,16 +351,16 @@
   <section id="contacto" class="contacto">
     <div class="contacto-txt">
       <h1 class="titulo">Trabajemos<br>juntos!</h1>
+      <p>Arquitecto Alberto Moeller</p> 
       <div class="contact-icon">
-      <p>Arquitecto Alberto Moeller <br>
         <a class="" href="https://wa.me/5491121595231"><i class="fab fa-whatsapp icon-circle"></i></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><i class="fab fa-google icon-circle"></i></a>
-       <!--1121595231 <br>
-      moellerdesign@gmail.com</p>-->
+       <!--<br>1121595231 <br>
+       moellerdesign@gmail.com</p>-->
       </div>
       <hr> 
-      <div>
-        <p>Sergio Antonio Graziano <br>
+      <p>Sergio Antonio Graziano</p>
+      <div class="contact-icon">
         <a class="" href="https://wa.me/541155113032"><i class="fab fa-whatsapp icon-circle"></i></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><i class="fab fa-google icon-circle"></i></a>
        <!-- 1155113032 <br>
