--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </div>
     <div class="persona persona1">
-      <img src="assets/foto_sergio.jpg" alt="">
+      <img src="assets/foto_sergio2.jpg" alt="">
       <div class="titles">
         <p class="title">Sergio Antonio Graziano</p>
         <p class="subtitle">Marketing & Administracion</p>
