--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
   </style>
 </head>
-<body style="background-color: #9EA6BA;">
+<body style="background-color: #9EA6BA; padding: 0;">
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Bootstrap JS -->
@@ -130,7 +130,7 @@
       <img src="assets/foto_sergio2.jpg" alt="">
       <div class="titles">
         <p class="title">Sergio Antonio Graziano</p>
-        <p class="subtitle">Marketing & Administracion</p>
+        <p class="subtitle">Marketing & Administración</p>
       </div>
     </div>
   </div>
@@ -351,15 +351,18 @@
   <section id="contacto" class="contacto">
     <div class="contacto-txt">
       <h1 class="titulo">Trabajemos<br>juntos!</h1>
-      <p>Arquitecto Alberto Moeller</p> 
+      <div class="alb">
+      <p>Alberto Moeller</p> 
       <div class="contact-icon">
         <a class="" href="https://wa.me/5491121595231"><i class="fab fa-whatsapp icon-circle"></i></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><i class="fab fa-google icon-circle"></i></a>
        <!--<br>1121595231 <br>
        moellerdesign@gmail.com</p>-->
       </div>
+      </div>
       <hr> 
-      <p>Sergio Antonio Graziano</p>
+      <div class="ser">
+      <p>Sergio Graziano</p>
       <div class="contact-icon">
         <a class="" href="https://wa.me/541155113032"><i class="fab fa-whatsapp icon-circle"></i></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><i class="fab fa-google icon-circle"></i></a>
