--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </div>
     <div class="persona persona1">
-      <img src="assets/foto_sergio2.jpg" alt="">
+      <img src="assets/foto_sergio3.jpg" alt="">
       <div class="titles">
         <p class="title">Sergio Antonio Graziano</p>
         <p class="subtitle">Marketing & Administración</p>
@@ -271,7 +271,7 @@
         <div class="works-filter">
             <button class="filter-btn" data-category="baño">Baño</button>
             <button class="filter-btn" data-category="casa">Casa country</button>
-            <button class="filter-btn" data-category="consul">Consultorio</button>
+            <!--<button class="filter-btn" data-category="consul">Consultorio</button>-->
             <button class="filter-btn" data-category="cocina">Cocina</button>
             <button class="filter-btn" data-category="lab">Laboratorio</button>
             <button class="filter-btn" data-category="living">Living/Comedor</button>
@@ -287,7 +287,7 @@
           <select class="form-select" id="categorySelect" style="color: #232A3A;background-color: #9EA6BA;">
             <option value="baño">Baño</option>
             <option value="casa">Casa country</option>
-            <option value="consul">Consultorio</option>
+            <!--<option value="consul">Consultorio</option>-->
             <option value="cocina">Cocina</option>
             <option value="lab">Laboratorio</option>
             <option value="living">Living/Comedor</option>
@@ -354,8 +354,8 @@
       <div class="alb">
       <p>Alberto Moeller</p> 
       <div class="contact-icon">
-        <a class="" href="https://wa.me/5491121595231"><i class="fab fa-whatsapp icon-circle"></i></a>
-        <a class="" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><i class="fab fa-google icon-circle"></i></a>
+        <a class="" href="https://wa.me/5491121595231"><img src="assets/wpp.png" alt=""></a>
+        <a class="" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><img src="assets/gmail.png" alt=""></a>
        <!--<br>1121595231 <br>
        moellerdesign@gmail.com</p>-->
       </div>
@@ -364,8 +364,8 @@
       <div class="ser">
       <p>Sergio Graziano</p>
       <div class="contact-icon">
-        <a class="" href="https://wa.me/541155113032"><i class="fab fa-whatsapp icon-circle"></i></a>
-        <a class="" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><i class="fab fa-google icon-circle"></i></a>
+        <a class="" href="https://wa.me/541155113032"><img src="assets/wpp.png" alt=""></a>
+        <a class="" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><img src="assets/gmail.png" alt=""></a>
        <!-- 1155113032 <br>
         sergioantoniograziano2008@yahoo.com.ar</p>-->
       </div>
