--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
         <div class="stat-num">+40</div>
         <div class="stat-label">años de<br>experiencia</div>
       </div>
-
     </div>
+  
+    <div><div class="linea-vertical-stats"></div></div>
+
     <div class="stat">
       <div class="stat.icon"><img src="assets/icono_martillo.png" alt="Icono martillo"></div>
       <div class="stat-info">
@@ -105,6 +107,7 @@
         <div class="stat-label">proyectos<br>realizados</div>
       </div>
     </div>
+    <div><div class="linea-vertical-stats"></div></div>
     <div class="stat">
       <div class="stat-icon"><img src="assets/icono_regla.png" alt="Icono regla"></div>
       <div class="stat-info">
@@ -352,18 +355,20 @@
     <div class="contacto-txt">
       <h1 class="titulo">Trabajemos<br>juntos!</h1>
       <div class="alb">
-      <p>Alberto Moeller</p> 
+       
       <div class="contact-icon">
+        <p>Alberto Moeller</p>
         <a class="" href="https://wa.me/5491121595231"><img src="assets/wpp.png" alt=""></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><img src="assets/gmail.png" alt=""></a>
        <!--<br>1121595231 <br>
        moellerdesign@gmail.com</p>-->
       </div>
       </div>
-      <hr> 
+ 
       <div class="ser">
-      <p>Sergio Graziano</p>
+      
       <div class="contact-icon">
+        <p>Sergio Graziano</p>
         <a class="" href="https://wa.me/541155113032"><img src="assets/wpp.png" alt=""></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><img src="assets/gmail.png" alt=""></a>
        <!-- 1155113032 <br>
