--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
         <nav>
             <ul>
-                <a href="#about">QUIÉNES SOMOS</a>
+                <a href="#quienes">QUIÉNES SOMOS</a>
                 <a href="#about">ANTECEDENTES</a>
                 <a href="#works">TRABAJOS</a>
                 <a href="#contacto">CONTACTO</a>
@@ -492,7 +492,7 @@
   }
 
   // 👉 Filtro por defecto (ej: baño)
-  applyFilter('baño');
+  applyFilter('cocina');
   if (categorySelect) categorySelect.value = 'baño';
 </script>
 
