--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
   // 👉 Filtro por defecto (ej: baño)
   applyFilter('cocina');
-  if (categorySelect) categorySelect.value = 'baño';
+  if (categorySelect) categorySelect.value = 'cocina';
 </script>
 
 
