--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- Logo y nombre -->
     <div class="container-logo d-flex align-items-center">
-      <img src="assets/logo_barra.png" alt="Logo" width="30" height="30" class="logo">
+      <a href="https://interhausdesign.com.ar/"><img src="assets/logo_barra.png" alt="Logo" width="30" height="30" class="logo"></a>
     </div>
 
     <!-- Botón hamburguesa -->
@@ -193,7 +193,7 @@
   <div class="card-about">
     <div class="titles">
       <p class="title">PARAGUAY</p>
-      <p class="subtitle">Provincia</p>
+      <p class="subtitle">Asunción</p>
     </div>
     <p class="parrafo">
       INTERDESIGN SRL: Diseño y elaboracion de equipamientos de viviendas, negocios y laboratorios (1998-2008)</p>
@@ -259,7 +259,7 @@
                 <div class="card-about">
                 <div class="titles">
                   <p class="title">PARAGUAY</p>
-                  <p class="subtitle">Provincia</p>
+                  <p class="subtitle">Asunción</p>
                 </div>
                 <p class="parrafo">
                   INTERDESIGN SRL: Diseño y elaboracion de equipamientos de viviendas, negocios y laboratorios (1998-2008)</p>
