--- a/index.html
+++ b/index.html
@@ -307,42 +307,44 @@
               </svg>
           </div>
          <div class="works-grid">
-            <div class="item" data-category="baño"><img src="assets/baños/baño.jpg" alt="Trabajo 1"></div>
-            <div class="item" data-category="casa"><img src="assets/casa_country/country1.JPG" alt="Trabajo 2"></div>
-            <div class="item" data-category="casa"><img src="assets/casa_country/country2.JPG" alt="Trabajo 3"></div>
-            <div class="item" data-category="casa"><img src="assets/casa_country/country3.JPG" alt="Trabajo 4"></div>
-            <div class="item" data-category="casa"><img src="assets/casa_country/country4.JPG" alt="Trabajo 5"></div>
-            <div class="item" data-category="casa"><img src="assets/casa_country/country5.JPG" alt="Trabajo 6"></div>
-            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio1.jpg" alt="Trabajo 7"></div>
-            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio2.jpg" alt="Trabajo 8"></div>
-            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio3.jpg" alt="Trabajo 9"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina1.jpeg" alt="Trabajo 10"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina2.jpeg" alt="Trabajo 11"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina3.jpeg" alt="Trabajo 12"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina4.jpeg" alt="Trabajo 13"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina5.jpeg" alt="Trabajo 14"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina6.jpeg" alt="Trabajo 15"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio1.jpg" alt="Trabajo 16"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio2.jpg" alt="Trabajo 17"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio3.jpg" alt="Trabajo 18"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio4.jpg" alt="Trabajo 19"></div>
-            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio5.jpg" alt="Trabajo 20"></div>
-            <div class="item" data-category="living"><img src="assets/living/living1.jpg" alt="Trabajo 21"></div>
-            <div class="item" data-category="living"><img src="assets/living/living2.jpg" alt="Trabajo 22"></div>
-            <div class="item" data-category="living"><img src="assets/living/living3.JPG" alt="Trabajo 23"></div>
-            <div class="item" data-category="living"><img src="assets/living/living4.jpg" alt="Trabajo 24"></div>
-            <div class="item" data-category="living"><img src="assets/living/living5.jpg" alt="Trabajo 25"></div>
-            <div class="item" data-category="living"><img src="assets/living/living6.jpg" alt="Trabajo 26"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina1.jpg" alt="Trabajo 27"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina2.jpg" alt="Trabajo 28"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina3.jpg" alt="Trabajo 29"></div>
-            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina4.jpg" alt="Trabajo 30"></div>
-            <div class="item" data-category="placard"><img src="assets/placards/placard1.jpg" alt="Trabajo 31"></div>
-            <div class="item" data-category="placard"><img src="assets/placards/placard2.jpg" alt="Trabajo 32"></div>
-            <div class="item" data-category="placard"><img src="assets/placards/placard3.jpg" alt="Trabajo 33"></div>
-            <div class="item" data-category="tabla"><img src="assets/tablas/tabla1.jpeg" alt="Trabajo 34"></div>
-            <div class="item" data-category="tabla"><img src="assets/tablas/tabla2.jpeg" alt="Trabajo 35"></div>
-            <div class="item" data-category="tabla"><img src="assets/tablas/tabla3.jpeg" alt="Trabajo 36"></div>
+            <div class="item" data-category="baño"><img src="assets/baños/baño1.jpeg" alt="Trabajo 1"></div>
+            <div class="item" data-category="baño"><img src="assets/baños/baño2.jpeg" alt="Trabajo 2"></div>
+            <div class="item" data-category="baño"><img src="assets/baños/baño3.jpg" alt="Trabajo 3"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country1.JPG" alt="Trabajo 4"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country2.JPG" alt="Trabajo 5"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country3.JPG" alt="Trabajo 6"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country4.JPG" alt="Trabajo 7"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country5.JPG" alt="Trabajo 8"></div>
+            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio1.jpg" alt="Trabajo 9"></div>
+            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio2.jpg" alt="Trabajo 10"></div>
+            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio3.jpg" alt="Trabajo 11"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina1.jpeg" alt="Trabajo 12"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina2.jpeg" alt="Trabajo 13"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina3.jpeg" alt="Trabajo 14"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina4.jpeg" alt="Trabajo 15"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina5.jpeg" alt="Trabajo 16"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina6.jpeg" alt="Trabajo 17"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio1.jpg" alt="Trabajo 18"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio2.jpg" alt="Trabajo 19"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio3.jpg" alt="Trabajo 20"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio4.jpg" alt="Trabajo 21"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio5.jpg" alt="Trabajo 22"></div>
+            <div class="item" data-category="living"><img src="assets/living/living1.jpg" alt="Trabajo 23"></div>
+            <div class="item" data-category="living"><img src="assets/living/living2.jpg" alt="Trabajo 24"></div>
+            <div class="item" data-category="living"><img src="assets/living/living3.JPG" alt="Trabajo 25"></div>
+            <div class="item" data-category="living"><img src="assets/living/living4.jpg" alt="Trabajo 26"></div>
+            <div class="item" data-category="living"><img src="assets/living/living5.jpg" alt="Trabajo 27"></div>
+            <div class="item" data-category="living"><img src="assets/living/living6.jpg" alt="Trabajo 28"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina1.jpg" alt="Trabajo 29"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina2.jpg" alt="Trabajo 30"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina3.jpg" alt="Trabajo 31"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina4.jpg" alt="Trabajo 32"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard1.jpg" alt="Trabajo 33"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard2.jpg" alt="Trabajo 34"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard3.jpg" alt="Trabajo 35"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla1.jpeg" alt="Trabajo 36"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla2.jpeg" alt="Trabajo 37"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla3.jpeg" alt="Trabajo 38"></div>
         </div>
         <div class="d-md-none" id="nextBtn">
             <svg width="42" height="42" viewBox="0 0 24 24" fill="none">
@@ -381,7 +383,7 @@
       <div class="linea-vertical"></div>
 
     <div class="img-contacto">
-      <img src="assets/manos_carpintero.jpg" alt="Imagen de carpintería" />
+      <img src="assets/manos_carpintero.png" alt="Imagen de carpintería" />
     </div>
   </section>
     <footer>
