--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
          <div class="works-grid">
             <div class="item" data-category="baño"><img src="assets/baños/baño1.jpeg" alt="Trabajo 1"></div>
             <div class="item" data-category="baño"><img src="assets/baños/baño2.jpeg" alt="Trabajo 2"></div>
-            <div class="item" data-category="baño"><img src="assets/baños/baño3.jpg" alt="Trabajo 3"></div>
+            <div class="item" data-category="baño"><img src="assets/baños/baño3.jpeg" alt="Trabajo 3"></div>
             <div class="item" data-category="casa"><img src="assets/casa_country/country1.JPG" alt="Trabajo 4"></div>
             <div class="item" data-category="casa"><img src="assets/casa_country/country2.JPG" alt="Trabajo 5"></div>
             <div class="item" data-category="casa"><img src="assets/casa_country/country3.JPG" alt="Trabajo 6"></div>
