--- a/index.html
+++ b/index.html
@@ -359,22 +359,26 @@
       <div class="alb">
        
       <div class="contact-icon">
+        <div class="items-contact">
         <p>Alberto Moeller</p>
         <a class="" href="https://wa.me/5491121595231"><img src="assets/wpp.png" alt=""></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><img src="assets/gmail.png" alt=""></a>
        <!--<br>1121595231 <br>
        moellerdesign@gmail.com</p>-->
+       </div>
       </div>
       </div>
  
       <div class="ser">
       
       <div class="contact-icon">
+        <div class="items-contact">
         <p>Sergio Graziano</p>
         <a class="" href="https://wa.me/541155113032"><img src="assets/wpp.png" alt=""></a>
         <a class="" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><img src="assets/gmail.png" alt=""></a>
        <!-- 1155113032 <br>
         sergioantoniograziano2008@yahoo.com.ar</p>-->
+        </div>
       </div>
       </div>
 
