--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!-- MENU OFFCANVAS DESDE LA DERECHA -->
 <div class="offcanvas offcanvas-end custom-width" tabindex="-1" id="menuLateral" aria-labelledby="menuLateralLabel" style="background-color: #9EA6BA; color: white;">
   <div class="offcanvas-header">
-    <img src="assets/Logo InterhausDesign-min.png" alt="">
+    <a href="https://interhausdesign.com.ar/"><img src="assets/Logo InterhausDesign-min.png" alt=""></a>
     <button type="button" class="btn-close" style="color:#232A3A;" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
   </div>
   <div class="offcanvas-body">
