--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
     </div>
     <div class="persona persona1">
-      <img src="assets/foto_sergio4.jpg" alt="">
+      <img src="assets/foto_sergio4_recortada.jpg" alt="">
       <div class="titles">
         <p class="title">Sergio Antonio Graziano</p>
         <p class="subtitle">Marketing & Administración</p>
