--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css?v=1.14">
+    <link rel="stylesheet" href="styles.css?v=1.15">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
@@ -203,7 +203,8 @@
 
 <section id="about-mobile">
       <div class="texto-about">
-    <h1 class="titulo">ANTECEDENTES PROFESIONALES</h1></div>
+    <h1 class="titulo">ANTECEDENTES PROFESIONALES</h1>
+      </div>
         <div class="about-filter">
             <button class="filter-btnAbout active" data-category="arg">Argentina</button>
             <button class="filter-btnAbout" data-category="ita">Italia</button>
