--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Diseño y fabricación de muebles contemporáneos a medida. Más de 40 años de experiencia creando espacios únicos y funcionales.">
+    <meta name="keywords" content="diseño de muebles, muebles contemporáneos, muebles a medida, carpintería, interiorismo, equipamiento de interiores, InterHaus Design, diseño de interiores, muebles modernos, fabricación de muebles, muebles personalizados, arquitectura y diseño, Bariloche, diseño argentino">
     <link rel="icon" type="image/png" href="assets/icon-azul-oscuro.png">
-    <link rel="stylesheet" href="styles.css?v=1.17">
+    <link rel="stylesheet" href="styles.css?v=1.18">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
